--- a/requirements.txt
+++ b/requirements.txt
@@ -5,4 +5,5 @@ conda install -c bioconda muscle=3.8.1551
 sudo apt install ncbi-tools-bin
 conda install -c bioconda emboss=6.6.0
 conda install -c bioconda blast=2.12.0
-
+pip install mmtf-python==1.1.3
+conda install -y -c bioconda msms==2.6.1
