--- a/requirements.txt
+++ b/requirements.txt
@@ -7,3 +7,5 @@ conda install -c bioconda emboss=6.6.0
 conda install -c bioconda blast=2.12.0
 pip install mmtf-python==1.1.3
 conda install -y -c bioconda msms==2.6.1
+conda install -y -c bioconda phyml==3.3.20190909
+conda install -y -c bioconda paml==4.9
